--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-exclude: ["Gemfile", "Gemfile.lock", "node_modules", "vendor/bundle/", "vendor/cache/", "vendor/gems/", "vendor/ruby/", js/jsconfig.json]
-
 show_downloads: false
 title: HeadsetRuler.com
-description:
 theme: jekyll-theme-dinky
 permalink: /:path/:basename/
+github:
+  is_user_page: true
